include $(top_srcdir)/examples/Makefile.am_fragment

# build the executable but don't install it
noinst_PROGRAMS = text-rotate toy-text user-font

text_rotate_SOURCES = text-rotate.cc
toy_text_SOURCES=toy-text.cc
user_font_SOURCES=user-font.cc

CLEANFILES = text-rotate.png toy-text.png user-font.png
